// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceList: Component should render correctly 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <MobileMenu
    active="dataSourceNavBtn"
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
            values={Object {}}
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
            values={Object {}}
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
            values={Object {}}
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "folderNavBtn",
          "label": <FormattedMessage
            defaultMessage="Pages"
            id="project.view.projectPages"
            values={Object {}}
          />,
          "to": "/project/1/folder",
          "type": "link_item",
        },
      ]
    }
  />
  <ProjectTabs
    active="sources"
    url="/project/1"
  />
  <ContextHeader
    subtitle="Overview"
    title="Data Sources"
  >
    <PlusButton
      hideOnDesktop={false}
      id="createDataSourceDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent="No Data Sources"
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
              >
                <Unknown
                  customStyles={
                    Object {
                      "fill": "#FFF",
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="Uploading file failed"
              id="project.dataSourceList.fileUploadingError"
              values={Object {}}
            />
          </ForwardRef(styled.span)>
        }
        key="0"
      >
        <Styled(H1)
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </Styled(H1)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
              >
                <Unknown
                  customStyles={
                    Object {
                      "fill": "#FFF",
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="Uploading file failed"
              id="project.dataSourceList.fileUploadingError"
              values={Object {}}
            />
          </ForwardRef(styled.span)>
        }
        key="1"
      >
        <Styled(H1)
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </Styled(H1)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
              >
                <Unknown
                  customStyles={
                    Object {
                      "fill": "#FFF",
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="Uploading file failed"
              id="project.dataSourceList.fileUploadingError"
              values={Object {}}
            />
          </ForwardRef(styled.span)>
        }
        key="2"
      >
        <Styled(H1)
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </Styled(H1)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
              >
                <Unknown
                  customStyles={
                    Object {
                      "fill": "#FFF",
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="Uploading file failed"
              id="project.dataSourceList.fileUploadingError"
              values={Object {}}
            />
          </ForwardRef(styled.span)>
        }
        key="3"
      >
        <Styled(H1)
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </Styled(H1)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
              >
                <Unknown
                  customStyles={
                    Object {
                      "fill": "#71737e",
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="Uploading file failed"
              id="project.dataSourceList.fileUploadingError"
              values={Object {}}
            />
          </ForwardRef(styled.span)>
        }
        key="4"
      >
        <Styled(H1)
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </Styled(H1)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
              >
                <Unknown
                  customStyles={
                    Object {
                      "fill": "#71737e",
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="Uploading file failed"
              id="project.dataSourceList.fileUploadingError"
              values={Object {}}
            />
          </ForwardRef(styled.span)>
        }
        key="5"
      >
        <Styled(H1)
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </Styled(H1)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
              >
                <Unknown
                  customStyles={
                    Object {
                      "fill": "#FFF",
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={false}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="Uploading file failed"
              id="project.dataSourceList.fileUploadingError"
              values={Object {}}
            />
          </ForwardRef(styled.span)>
        }
        key="6"
      >
        <Styled(H1)
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </Styled(H1)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
              >
                <Unknown
                  customStyles={
                    Object {
                      "fill": "#71737e",
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="Uploading file..."
              id="project.dataSourceList.fileUploading"
              values={Object {}}
            />
          </ForwardRef(styled.span)>
        }
        key="7"
      >
        <Styled(H1)
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </Styled(H1)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-0"
              >
                Source
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-0"
              >
                <Unknown
                  customStyles={
                    Object {
                      "fill": "#71737e",
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-1"
              >
                Items
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-1"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-2"
              >
                Fields
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-2"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-3"
              >
                Filters
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-3"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
            <ForwardRef(styled.div)
              metaProcessing={true}
            >
              <ForwardRef(styled.span)
                id="metaItem-4"
              >
                Tags
              </ForwardRef(styled.span)>
              <ForwardRef(styled.span)
                id="metaItemValue-4"
              >
                —
              </ForwardRef(styled.span)>
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        headerComponent={
          <ForwardRef(styled.span)
            metaProcessing={true}
          >
            <FormattedMessage
              defaultMessage="Uploading file failed"
              id="project.dataSourceList.fileUploadingError"
              values={Object {}}
            />
          </ForwardRef(styled.span)>
        }
        key="8"
      >
        <Styled(H1)
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </Styled(H1)>
      </Styled(Component)>
    </styled.section>
  </LoadingWrapper>
  <NavigationContainer
    fixed={true}
    hideOnDesktop={true}
    right={false}
  >
    <BackArrowButton
      id="backBtn"
      onClick={[Function]}
    />
    <PlusButton
      hideOnDesktop={false}
      id="createDataSourceBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`DataSourceList: Component should render empty 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <MobileMenu
    active="dataSourceNavBtn"
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
            values={Object {}}
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
            values={Object {}}
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
            values={Object {}}
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "folderNavBtn",
          "label": <FormattedMessage
            defaultMessage="Pages"
            id="project.view.projectPages"
            values={Object {}}
          />,
          "to": "/project/1/folder",
          "type": "link_item",
        },
      ]
    }
  />
  <ProjectTabs
    active="sources"
    url="/project/1"
  />
  <ContextHeader
    subtitle="Overview"
    title="Data Sources"
  >
    <PlusButton
      hideOnDesktop={false}
      id="createDataSourceDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={true}
    noDataContent="No Data Sources"
  >
    <styled.section />
  </LoadingWrapper>
  <NavigationContainer
    fixed={true}
    hideOnDesktop={true}
    right={false}
  >
    <BackArrowButton
      id="backBtn"
      onClick={[Function]}
    />
    <PlusButton
      hideOnDesktop={false}
      id="createDataSourceBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;
